# bare-metal_UART_pico2w

./: CMakeLists.txt  main.c
